--- a/src/components/Sec5.scss
+++ b/src/components/Sec5.scss
@@ -4,6 +4,7 @@
 .Sec5 {
   display: flex;
   flex-direction: column;
+
   section {
     margin: auto auto;
     display: flex;
@@ -15,6 +16,7 @@
     // grid-template-columns: 1fr 1fr;
     // margin: 8rem 20rem 0 20rem;
     display: flex;
+    align-items: center;
   }
 
   p {
